--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flappy Bird</title>
+    <title>Just keep Flapping!</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" charset="utf-8"></script>
+    <script src="pure.js" charset="utf-8"></script>
   </head>
   <body>
 
