--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Just keep Flapping!</title>
     <link href="https://fonts.googleapis.com/css?family=Teko:700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="pure.js" charset="utf-8"></script>
+    <script src="game.js" charset="utf-8"></script>
   </head>
   <body>
 
